tests/rosetta/out/Java/circular-primes.error
javac error: exit status 1
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:54: error: incompatible types: String cannot be converted to Number
            out = out + ((Number)String.valueOf(xs.get(i))).doubleValue();
                                               ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:75: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> f = q.get(0);
                               ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:76: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> fd = fq.get(0);
                                 ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:77: error: incompatible types: List<Integer> cannot be converted to int
        if (isPrime(f) && isCircular(f)) {
                    ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:77: error: incompatible types: List<Integer> cannot be converted to int
        if (isPrime(f) && isCircular(f)) {
                                     ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:78: error: incompatible types: List<Integer> cannot be converted to Integer
            circs.add(f);
                      ^
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:88: error: bad operand types for binary operator '*'
                q.add(f * 10 + d);
                        ^
  first type:  List<Integer>
  second type: int
/tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java:89: error: incompatible types: List<Integer> cannot be converted to Integer
                fq.add(fd);
                       ^
Note: /tmp/TestMochiToJavacircular-primes3179652710/001/CircularPrimes.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
8 errors
